<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:weightSum="10">

        <Button
            android:id="@+id/btnLeftClick"
            android:layout_width="wrap_content"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/left_click" />
        
        <Button
            android:id="@+id/btnWheelClick"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/wheel_click" />

        <Button
            android:id="@+id/btnRightClick"
            android:layout_width="wrap_content"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/right_click" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:weightSum="9">

        <Button
            android:id="@+id/btnPageUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/page_up" />

        <Button
            android:id="@+id/btnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/key_up" />

        <Button
            android:id="@+id/btnPageDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/page_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:weightSum="9">

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/key_left" />

        <Button
            android:id="@+id/btnDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/key_down" />

        <Button
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/key_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:weightSum="20">

        <Button
            android:id="@+id/btnComma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comma" />

        <Button
            android:id="@+id/btnSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:text="@string/key_space" />

        <Button
            android:id="@+id/btnPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/period" />
    </LinearLayout>
</LinearLayout>